syntax = "proto3";

package idl;

import "cli_to_hub.proto";

service Agent {
    rpc CheckDiskSpace (CheckSegmentDiskSpaceRequest) returns (CheckDiskSpaceReply) {}
    rpc AgentExecuteUpgradePrimariesSubStep (UpgradePrimariesRequest) returns (UpgradePrimariesReply) {}
    rpc CreateSegmentDataDirectories (CreateSegmentDataDirRequest) returns (CreateSegmentDataDirReply) {}
    rpc CopyMasterDirectoryToSegmentDirectories (CopyMasterDirRequest) returns (CopyMasterDirReply) {}
    rpc StopAgent(StopAgentRequest) returns (StopAgentReply) {}
}

message UpgradePrimariesRequest {
    string OldBinDir = 1;
    string NewBinDir = 2;
    string NewVersion = 3;
    repeated DataDirPair DataDirPairs = 4;
    bool CheckOnly = 5;
}

message DataDirPair {
    string OldDataDir = 1;
    string NewDataDir = 2;
    int32  OldPort    = 3;
    int32  NewPort    = 4;
    int32  Content    = 5;
    int32  DBID       = 6;
}

message UpgradePrimariesReply {}

message CreateSegmentDataDirRequest {
	repeated string datadirs = 1;
}

message CreateSegmentDataDirReply {}

message CopyMasterDirRequest {
	string masterDir = 1;
	repeated string datadirs = 2;
}

message CopyMasterDirReply {}

message StopAgentRequest {}
message StopAgentReply {}

message CheckSegmentDiskSpaceRequest {
    CheckDiskSpaceRequest request = 1;
    repeated string datadirs = 2;
}
